--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -58,6 +58,7 @@
 }
 
 .contact-icons-container {
+    margin-top: 0.5rem;
     display: flex;
     flex-wrap: wrap;
     column-gap: 0.5rem;
@@ -65,6 +66,7 @@
 
 .contact-icon {
     cursor: pointer;
+    margin: 0.25rem;
 }
 
 .about-me-image-container {
@@ -190,6 +192,7 @@
     grid-template-rows: 80% 20%;
     justify-content: center;
     align-items: center;
+    margin: 0.25rem;
 }
 
 .technology-used {
